<resources>
    <string name="app_name">CIC CATalyst</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="token">Token</string>
    <string name="login">Login</string>
    <string name="lewati">Lewati</string>
    <string name="sudahkah">Sudahkah kamu ke Cats and Ice Cream hari ini?</string>
    <string name="home">Beranda</string>
    <string name="event">Promosi</string>
    <string name="our_cats">Daftar Kucing</string>
    <string name="our_menu">Daftar Menu</string>
    <string name="reservation">Reservasi</string>
    <string name="contacts">Kontak</string>
    <string name="application_id">2E945EB9-5AAB-9DD3-FF6B-944234052D00</string>
    <string name="secret_key">BD2D4FCD-92D0-32EF-FF9C-9A085CFFC200</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cats_and_ice_cream">Cats and Ice Cream</string>
    <string name="cic_home_description">Ini adalah surga bagi para pecinta kucing di dunia. Untuk reservasi dapat melaui LINE ke @catsandicecream atau daftar sebagai member ke untuk dapat melakukan reservasi melalui aplikasi ini. Buka setiap hari kecuali Senin, 11.00 - 22.00.</string>
    <string name="home_bullet_1">Nikmati sensasi bermain bersama kucing</string>
    <string name="home_bullet_2">Kucing dengan beragam ras</string>
    <string name="home_bullet_3">Interior berasa dalam hutan</string>
    <string name="home_bullet_4">Playground khusus untuk bermain kucing</string>
    <string name="home_bullet_5">Es krim berbagai rasa bisa dinikmati</string>
    <string name="pinch">Pinch to zoom</string>
    <string name="reservasi">Reservasi</string>
    <string name="reservation_detail">Detail Reservasi</string>
    <string name="jam">Jam</string>
    <string name="status">Status</string>
    <string name="reservasi_tempat">Reservasi Tempat</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="waktu_selesai">Waktu Selesai</string>

    <string-array name="jam_reservasi">
        <item>11.00 - 12.00</item>
        <item>12.00 - 13.00</item>
        <item>13.00 - 14.00</item>
        <item>14.00 - 15.00</item>
        <item>15.00 - 16.00</item>
        <item>16.00 - 17.00</item>
        <item>17.00 - 18.00</item>
        <item>18.00 - 19.00</item>
        <item>19.00 - 20.00</item>
        <item>20.00 - 21.00</item>
        <item>21.00 - 22.00</item>
    </string-array>

    <string-array name="jam_mulai_selesai_reservasi">
        <item>11.00</item>
        <item>12.00</item>
        <item>13.00</item>
        <item>14.00</item>
        <item>15.00</item>
        <item>16.00</item>
        <item>17.00</item>
        <item>18.00</item>
        <item>19.00</item>
        <item>20.00</item>
        <item>21.00</item>
        <item>22.00</item>
    </string-array>
</resources>
