<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/icon_event"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_our_cats"
            android:icon="@drawable/icon_our_cats"
            android:title="@string/our_cats" />
        <item
            android:id="@+id/nav_our_menu"
            android:icon="@drawable/icon_our_menu"
            android:title="@string/our_menu" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/icon_reservation"
            android:title="@string/reservation" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/icon_contacts"
            android:title="@string/contacts" />
    </group>

</menu>